WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53945
openDatabaseSync() stop responding after too many call
https://bugs.webkit.org/show_bug.cgi?id=53945
Summary
openDatabaseSync() stop responding after too many call
Benjamin Poulain
Reported
2011-02-07 14:37:03 PST
When using openDatabaseSync() repeatedly from a worker, it stops responding, not creating the database, neither calling the callback function. To reproduce: ./Tools/Scripts/run-webkit-tests --release --qt fast/workers/storage/open-database-inputs-sync.html --iterations 640 This is the reason of some flaky test of Qt. When a lot of tests using openDatabaseSync() end up in the same run, we get failures. I have not yet tested on other WebKit ports than Qt.
Attachments
Patch
(1.08 KB, patch)
2011-02-08 02:10 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(3.03 KB, patch)
2011-02-08 04:13 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2011-02-07 16:41:40 PST
The tests are simply going over quota. Every test allocate a database of estimatedSize 1024. After a few hundred test, the quota for origin is exceeded. The test runner should probably drop the databases between tests.
Benjamin Poulain
Comment 2
2011-02-08 02:10:26 PST
Created
attachment 81615
[details]
Patch Current idea: delete all databases between tests so we can do as many tests as we want without hitting the quota. I don't set in r? as I want to test on the mac port and get comments.
Andras Becsi
Comment 3
2011-02-08 02:16:36 PST
(In reply to
comment #2
)
> I don't set in r? as I want to test on the mac port and get comments.
If I remember correctly the EWS only test patches which have r? set.
Benjamin Poulain
Comment 4
2011-02-08 02:45:46 PST
More info, Ossy noticed we do not setup the quota size for Qt before dumpDatabaseQuota() is called. This should be investigated as well.
Benjamin Poulain
Comment 5
2011-02-08 04:13:12 PST
Created
attachment 81619
[details]
Patch
WebKit Commit Bot
Comment 6
2011-02-08 06:01:24 PST
The commit-queue encountered the following flaky tests while processing
attachment 81619
[details]
: http/tests/websocket/tests/handshake-error.html
bug 53851
(author:
abarth@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2011-02-08 06:04:39 PST
Comment on
attachment 81619
[details]
Patch Clearing flags on attachment: 81619 Committed
r77926
: <
http://trac.webkit.org/changeset/77926
>
WebKit Commit Bot
Comment 8
2011-02-08 06:04:43 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 9
2011-02-08 07:07:55 PST
http://trac.webkit.org/changeset/77926
might have broken GTK Linux 32-bit Release and Qt Linux Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug