third_party/WebKit/Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp
@@ -84,6 +84,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+const int databaseDefaultQuota = 5 * 1024 * 1024;
+
 NetworkAccessManager::NetworkAccessManager(QObject* parent)
     : QNetworkAccessManager(parent)
 {
@@ -529,6 +531,10 @@ void DumpRenderTree::resetToConsistentStateBeforeTesting(const QUrl& url)
     m_page->blockSignals(true);
     m_page->triggerAction(QWebPage::Stop);
     m_page->blockSignals(false);
+
+    QList<QWebSecurityOrigin> knownOrigins = QWebSecurityOrigin::allOrigins();
+    for (int i = 0; i < knownOrigins.size(); ++i)
+        knownOrigins[i].setDatabaseQuota(databaseDefaultQuota);
 
     // reset the layoutTestController at this point, so that we under no
     // circumstance dump (stop the waitUntilDone timer) during the reset
@@ -1028,7 +1034,7 @@ void DumpRenderTree::dumpDatabaseQuota(QWebFrame* frame, const QString& dbName)
            origin.host().toUtf8().data(),
            origin.port(),
            dbName.toUtf8().data());
-    origin.setDatabaseQuota(5 * 1024 * 1024);
+    origin.setDatabaseQuota(databaseDefaultQuota);
 }
 
 void DumpRenderTree::dumpApplicationCacheQuota(QWebSecurityOrigin* origin, quint64 defaultOriginQuota)
