third_party/WebKit/Tools/DumpRenderTree/qt/LayoutTestControllerQt.cpp
@@ -88,6 +88,7 @@ void LayoutTestController::reset()
     DumpRenderTreeSupportQt::dumpHistoryCallbacks(false);
     DumpRenderTreeSupportQt::dumpVisitedLinksCallbacks(false);
     setIconDatabaseEnabled(false);
+    clearAllDatabases();
 
     emit hidePage();
 }
